[gd_scene load_steps=2 format=3 uid="uid://wk4fysj4v8tv"]

[ext_resource type="Script" path="res://main.gd" id="1_36e05"]

[node name="main" type="Node2D"]
script = ExtResource("1_36e05")

[node name="Settings" type="Button" parent="."]
offset_left = 176.0
offset_top = 111.0
offset_right = 305.0
offset_bottom = 175.0
text = "SETTINGS"

[node name="Play" type="Button" parent="."]
offset_left = 176.0
offset_top = 32.0
offset_right = 304.0
offset_bottom = 96.0
text = "PLAY NOT QUIT"

[node name="Quit" type="Button" parent="."]
offset_left = 176.0
offset_top = 190.0
offset_right = 304.0
offset_bottom = 254.0
text = "QUIT"

[connection signal="pressed" from="Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
